# aoc

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  LICENSE  Makefile  README.md  requirements.txt
2022/: CMakeLists.txt
2022/day1/: CMakeLists.txt  Makefile  Problem.md  part1.cpp  part2.cpp
2022/day1/include/: day1.hpp
2022/day1/src/: main.cpp
2022/day1/v1/: CMakeLists.txt  part1.cpp  part2.cpp
2022/day1/v2/: part1.cpp  part2.cpp
2022/day2/: CMakeLists.txt  Problem.md  part2.cpp
2022/day2/v1/: CMakeLists.txt  part1.cpp  part2.cpp
2022/day2/v2/: CMakeLists.txt  part1.cpp
2022/include/: cli.hpp  day1.hpp  day2.hpp
src/2022/: CMakeLists.txt
src/2022/day1/: CMakeLists.txt  Problem.md  day1.hpp  part1.cpp  part2.cpp
src/2022/day2/: Problem.md  day2.hpp  part1.cpp  part2.cpp
src/2022/day3/: CMakeLists.txt  Problem.md  day3.hpp  part1.cpp  part2.cpp
src/2022/day4/: CMakeLists.txt  Problem.md  day4.hpp  part2.cpp
src/2022/include/: cli.hpp
